--- a/RouteGenerator/RouteGenerator.csproj
+++ b/RouteGenerator/RouteGenerator.csproj
@@ -89,11 +89,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\GoogleDirectionObject.cs" />
+    <Compile Include="Models\GoogleDirectionsObject.cs" />
+    <Compile Include="Models\GooglePlacesObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
