Add consideration of Elevation
Adding a paramter for elevation in the endpoint which defaults to 0m.
The route which is returned is (within 500m of user's input distance AND
200m of user's input elevation) OR (route with the closest distance).

--- a/RouteGenerator/RouteGenerator.csproj
+++ b/RouteGenerator/RouteGenerator.csproj
@@ -90,6 +90,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\GoogleDirectionsObject.cs" />
+    <Compile Include="Models\GoogleElevationObject.cs" />
     <Compile Include="Models\GooglePlacesObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
