Change the structure of the return object
A DTO was created to only return the necessary information to the client

--- a/RouteGenerator/RouteGenerator.csproj
+++ b/RouteGenerator/RouteGenerator.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\RouteDTO.cs" />
     <Compile Include="Models\GoogleDirectionsObject.cs" />
     <Compile Include="Models\GoogleElevationObject.cs" />
     <Compile Include="Models\GooglePlacesObject.cs" />
